@@ -18,3 +18,10 @@ swapCourses(Course first_course, TimeWindow first_window,
     Course second_course, TimeWindow second_window) swaps the two pairs in the chart.
 findConflicts(std::set<Student> students, TimeWindow time_window) finds all conflicts in a given TimeWindow.
 
+June 10th 2022:
+
+Adds TimeChart.cpp for class implementation. Implements methods setCourseAtWindow, getCoursesAtWindow,
+TimeChart constructor, getStudents and swapCourses. Uses the weekday modification introduced
+at TimeWindow. An important implication of the implementations is that if a course starts at
+14:00 and ends at 15:40, its starting hour is index 13 and ending hour is index 14. This is registered
+here to prevent confusion.
